--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -645,6 +645,82 @@ section .container {
   color: #fff;
 }
 
+/* git hub */
+.contributions .icon-box {
+  text-align: center;
+  background: rgba(204, 204, 204, 0.1);
+  padding: 80px 20px;
+  transition: all ease-in-out 0.3s;
+}
+
+.contributions .icon-box .icon {
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  background: #18d26e;
+  border-radius: 5px;
+  transition: all .3s ease-out 0s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  transform-style: preserve-3d;
+}
+
+.contributions .icon-box .icon i {
+  color: #fff;
+  font-size: 28px;
+}
+
+.contributions .icon-box .icon::before {
+  position: absolute;
+  content: '';
+  left: -8px;
+  top: -8px;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 5px;
+  transition: all .3s ease-out 0s;
+  transform: translateZ(-1px);
+}
+
+.contributions .icon-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.contributions .icon-box h4 a {
+  color: #fff;
+}
+
+.contributions .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.contributions .icon-box:hover {
+  background: #18d26e;
+  border-color: #18d26e;
+}
+
+.contributions .icon-box:hover .icon {
+  background: #fff;
+}
+
+.contributions .icon-box:hover .icon i {
+  color: #18d26e;
+}
+
+.contributions .icon-box:hover .icon::before {
+  background: #35e888;
+}
+
+.contributions .icon-box:hover h4 a, .certifications .icon-box:hover p {
+  color: #fff;
+}
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
@@ -1093,6 +1169,20 @@ section .container {
   color: #fff;
 }
 
+/* download button */
+.btn {
+  background-color: #18d26e;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
 
 
 
