--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,3 +1432,9 @@ section .container {
 .box{
   position: relative;
 }
+/* whatsapp */
+@media (min-width:1200px) {
+  .hidden-lg {
+      display: none !important
+  }
+}
